// shippy-service-consignment/proto/consignment/consignment.proto
syntax = "proto3";

package consignment; 

service ShippingService {
  rpc CreateConsignment(Consignment) returns (Response) {}
  //Создаем новый метод
  rpc GetConsignments(GetRequest) returns (Response){}
}

message Consignment {
  string id = 1;
  string description = 2;
  int32 weight = 3;
  repeated Container containers = 4;
  string vessel_id = 5;
}

message Container {
  string id = 1;
  string customer_id = 2;
  string origin = 3;
  string user_id = 4;
}

//Пустой запрос на получение
message GetRequest{}

message Response {
  bool created = 1;
  Consignment consignment = 2;
  //Добавлено сообщение о создании груза
  repeated Consignment consignments = 3;
}
/*
 Здесь мы создали новый метод для нашего сервиса под названием GetConsignments,
  мы также создали новый, GetRequest который пока ничего не содержит.
   Мы также добавили consignments поле к нашему ответному сообщению.
*/
